Fixed spacing with whoami

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,10 @@ body {
   margin-top: 20px;
 }
 
+.terminal-container > div:not(:first-child) {
+  margin-top: 20px;
+}
+
 .command-field {
   background: transparent;
   border: none;
